Closed
Bug 371846
Opened 18 years ago
Closed 18 years ago
Kill unneccesary ownership management code in nsBindingManager::SetAnonymousNodesFor
Categories
(Core :: XBL, defect)
Core
XBL
Tracking
()
RESOLVED
FIXED
People
(Reporter: sicking, Assigned: sicking)
Details
Attachments
(2 files)
|
1.86 KB,
patch
|
smaug
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
|
2.26 KB,
patch
|
Details | Diff | Splinter Review |
nsBindingManager::SetAnonymousNodesFor currently checks if any insertion points in the old list exists in the new list before killing the old list. This isn't needed any more since insertion points are refcounted.
Attachment #256536 -
Flags: superreview?(jst)
Attachment #256536 -
Flags: review?(Olli.Pettay)
Updated•18 years ago
|
Attachment #256536 -
Flags: superreview?(jst) → superreview+
Comment 1•18 years ago
|
||
Comment on attachment 256536 [details] [diff] [review]
Patch to fix
So this is basically backing out part of bug 296375. That bug has a testcase. r=me
Attachment #256536 -
Flags: review?(Olli.Pettay) → review+
| Assignee | ||
Comment 3•18 years ago
|
||
Yes, I need to test it using the testcases in bug 296375 first though.
If you wanna convert them into mochikit tests that'd save me that effort ;)
Comment 4•18 years ago
|
||
There's a single usable testcase there, your patch doesn't seem to regress that. I can make it a mochitest, yes.
Comment 5•18 years ago
|
||
Crashes with an old 1.0+ build, doesn't crash in a patched current trunk build, nor in 2.0.
Comment 6•18 years ago
|
||
er, actually it crashes in the 1.0+ build only if you remove the 'type="application/javascript"', which the old build for some case didn't like.
| Assignee | ||
Comment 7•18 years ago
|
||
Checked in.
Nickolay: thanks for helping out by helping writing the testcase.
| Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 8•18 years ago
|
||
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•