Bug 371846: Kill unneccesary ownership management code in nsBindingManager::SetAnonymousNodesFor. r=smaug sr=jst